# ambi-glass

./: .gitignore  BUILD_TEST_RESULTS.md  CHANGELOG.md  DEVELOPMENT_IMPROVEMENTS.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_STATUS.md  FEATURE_STATUS_REPORT.md  FEATURE_SUMMARY.html  FEATURE_SUMMARY.md  GITHUB_SETUP.md  GIT_COMMIT_INSTRUCTIONS.md  LICENSE  PRODUCTION_ROADMAP.md  PROJECT_FILE_RESTORATION_STATUS.md  PROJECT_FILE_RESTORE.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.txt  QUICK_START.md  README.md  SECURITY.md  TESTING_GUIDE.md  TESTING_SUMMARY.md  XCODE_TEST_SUMMARY.md
.github/: PULL_REQUEST_TEMPLATE.md
App/: AmbiGlassApp.swift  ContentView.swift
Audio/: AudioDeviceManager.swift  RecorderEngine.swift
CURSOR/: tasks.json
DOCS/: ARCHITECTURE.md  AUDIO_FORMAT_FIX.md  AUDIO_MODULE_VALIDATION_REPORT.md  CALIBRATION.md  DSP_NOTES.md  FORMATS.md  MEMORY_CONFIGURATION.md  MIC_PROFILES.md  PLUGIN_INTEGRATION.md  RECORDING_ENGINE_E2E_ANALYSIS.md  RECORDING_ENGINE_E2E_TEST_RESULTS.md  (+1 more)
Plugins/AmbiIRverb/: .gitignore  CMakeLists.txt  LICENSE  README.md
Plugins/AmbiIRverb/.cursor/: context.json  rules.md
Plugins/AmbiIRverb/JUCE/: README.txt
Plugins/AmbiIRverb/Presets/: IR_Neutral_1x.ambipreset  Room_Room_Tight_Booth.ambipreset
Plugins/AmbiIRverb/Source/: ConvoEngine.cpp  ConvoEngine.h  Diffuser.h  FileIO.cpp  FileIO.h  HallEngine.cpp  HallEngine.h  HybridVerb.cpp  HybridVerb.h  LookAndFeel.h  ModTail.cpp  ModTail.h  MsWidth.cpp  MsWidth.h  OutputEQ.cpp  OutputEQ.h  Parameters.cpp  Parameters.h  PlateEngine.cpp  PlateEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RoomEngine.cpp  RoomEngine.h  SpringEngine.cpp  SpringEngine.h
Plugins/AmbiIRverb/docs/: ARCHITECTURE.md  BUILD.md  CONTRIBUTING.md  CURRENT_STATE.md  DEVELOPMENT_ROADMAP.md  DSP_DESIGN.md  IMPLEMENTATION_GUIDE.md  README.md  ROADMAP.md
(+131 files in other folders)
